Repositorios y conexion a la base de datos

--- a/src/main/resources/templates/categorias/listCategorias.html
+++ b/src/main/resources/templates/categorias/listCategorias.html
@@ -42,9 +42,9 @@
               </thead>
               <tbody>
                 <tr th:each="categoria : ${categorias}">
-                  <th scope="row">${categoria.id}</th>
-                  <td>${categoria.nombre}</td>
-                  <td>${categoria.descripcion}</td>
+                  <td th:text='${categoria.id}'></th>
+                  <td th:text='${categoria.nombre}'></td>
+                  <td th:text='${categoria.descripcion}'></td>
                   <td>
                     <a href="#" class="btn btn-success btn-sm" role="button" title="Editar"><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
                     <a href="#" onclick="return confirm('¿Estas seguro?')" class="btn btn-success btn-sm" role="button" title="Eliminar"><i class="fas fa-trash" aria-hidden="true"></i></a>
