--- a/src/main/resources/templates/vacantes/listVacante.html
+++ b/src/main/resources/templates/vacantes/listVacante.html
@@ -40,7 +40,7 @@
               </thead>
               <tbody>
                 <tr th:each="vacante : ${vacantes}"> 
-                  <td>categoria</td>
+                  <td th:text="${vacante.categoria.nombre}"></td>
                   <td th:text="${vacante.nombre}"></td>
                   <td th:text="${vacante.fecha}"></td>
                   <td th:text="${vacante.estatus}"></td>
