--- a/src/main/resources/templates/vacantes/detalle.html
+++ b/src/main/resources/templates/vacantes/detalle.html
@@ -6,6 +6,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <title>EmpleosApp | Detalles de la Oferta de Trabajo</title>
+    
+    
  	 <!-- Bootstrap core CSS -->
     <link th:href="@{/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
     <!-- Custom styles for this template -->
@@ -23,7 +25,7 @@
 
         <div class="row">
 	          <div class="col-md-3">            
-	            	<img class="rounded mx-auto d-block" th:src="@{/images/{img} (img=${vacante.imagen})}" alt="Generic placeholder image" width="220" height="220">            
+	            	<img class="rounded mx-auto d-block" th:src="@{/logos/{img} (img=${vacante.imagen})}" alt="Generic placeholder image" width="220" height="220">            
 	          </div>
 	          <div class="col-md-9">
 	            <div class="card">
