--- a/src/main/resources/templates/vacantes/listVacante.html
+++ b/src/main/resources/templates/vacantes/listVacante.html
@@ -21,7 +21,7 @@
     <main role="main">     
       <hr>
       <div class="container"> 
-
+      	<div th:if="${msg != null}" class='alert alert-success' th:text="${msg}" role='alert'></div>
         <div class="card">
           <h4 class="card-header"><strong>Listado de Ofertas de Trabajo</strong></h4>              
           <div class="card-body">
@@ -46,8 +46,8 @@
                   <td th:text="${vacante.estatus}"></td>
                   <td th:text="${vacante.destacada == 1 ? 'SI' : 'NO'}"></td>
                   <td>
-                    <a href="#" class="btn btn-success btn-sm" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
-                    <a href="#" onclick="return confirm('¿Estas seguro?')" class="btn btn-success btn-sm" role="button" title="Eliminar el registro."><i class="fas fa-trash" aria-hidden="true"></i></a>
+                    <a th:href="@{/vacantes/edit/{id} (id=${vacante.id})}" class="btn btn-success btn-sm" role="button" title="Editar el registro."><i class="fas fa-pencil-alt" aria-hidden="true"></i></a>
+                    <a th:href="@{/vacantes/delete/{id} (id=${vacante.id})}" onclick="return confirm('¿Estas seguro?')" class="btn btn-danger btn-sm" role="button" title="Eliminar el registro."><i class="fas fa-trash" aria-hidden="true"></i></a>
                   </td>
                 </tr>                               
               </tbody>
